cluster/traefik/whoami-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: traefik-v2
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - name: http
    port: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: traefik-v2
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
